--- a/styles.css
+++ b/styles.css
@@ -95,14 +95,15 @@ header{
 }
 
 .sidebar .navlink {
-    margin: 15px;
+    margin: 10px;
     padding: auto;
     text-align: left;
     width: 100%;
+    
 }
 .sidebar .navlink a {
     width: 100%;
-    font-size: 20px;
+    font-size: 30px;
     margin: 25px;
   
     
@@ -110,7 +111,7 @@ header{
    
 }
 
-.sidebar  a:hover{
+.sidebar a:hover{
     transform: scale(1.2);
     padding: 8px;
     margin: 0;
@@ -127,7 +128,7 @@ header{
 
 h1{
     color:white;
-    margin: 15px;
+    margin: 20px;
     padding: 20px;
     text-align: left;
     font-size: 70px;
@@ -160,7 +161,7 @@ h2{
     text-align: left;
     color: black;
     padding: 20px;
-    font-size: 45px;
+    font-size: 35px;
     margin: 25px;
     align-items: center;
     font-family: "poppins";
@@ -170,7 +171,7 @@ h2{
 }
 .span2{ 
     display: block;
-    font-size: 20px;
+    font-size: 23px;
     font-weight: 300;
     margin-top: 20px;
     color:black;
@@ -218,7 +219,7 @@ h2{
     
 }
 .img1:hover{
-    transform: scale(1.15);
+    transform: scale(1.09);
     transition: .5s ease-in-out;
 }
 
@@ -231,7 +232,7 @@ h2{
     box-shadow: 10px 10px 5px;
 }
 .img2:hover{
-    transform: scale(1.15);
+    transform: scale(1.09);
     transition: .5s ease-in-out;
 }
 .img3{
@@ -242,7 +243,7 @@ h2{
     box-shadow: 10px 10px 5px;
 }
 .img3:hover{
-    transform: scale(1.15);
+    transform: scale(1.09);
     transition: .5s ease-in-out;
 }
 .img5{
@@ -253,7 +254,7 @@ h2{
     box-shadow: 10px 10px 5px;
 }
 .img5:hover{
-    transform: scale(1.15);
+    transform: scale(1.09);
     transition: .5s ease-in-out;
 }
 
@@ -269,7 +270,7 @@ h2{
 }
 
 .img6:hover{
-    transform: scale(1.15);
+    transform: scale(1.09);
     transition: .5s ease-in-out;
 }
 .img7{
@@ -286,7 +287,7 @@ h2{
 }
 
 .img7:hover{
-    transform: scale(1.15);
+    transform: scale(1.09);
     transition: .5s ease-in-out;
 }
 .img8{
@@ -295,12 +296,11 @@ h2{
     display: block;
     margin: auto;
     box-shadow: 10px 10px 5px;
-    
 
     
 }
 .img8:hover{
-    transform: scale(1.15);
+    transform: scale(1.09);
     transition: .5s ease-in-out;
 }
 .img9{
@@ -313,7 +313,7 @@ h2{
 
 }
 .img9:hover{
-    transform: scale(1.15);
+    transform: scale(1.09);
     transition: .5s ease-in-out;
 }
 
@@ -360,7 +360,7 @@ footer{
         flex: 33.33%;
         padding: 5px
     }
-    .img3{
+    .img3,.img1{
         margin-top: 100px;
     }
     .img5{
@@ -403,6 +403,13 @@ footer{
 
   
 }
+
+.img6 , .img3, .img8, .img5{
+    width: 60%;
+}
+.img9{
+    width: 80%;
+}
 .projects_h2{
     font-family: "permanent marker";
     background-color: gold;
@@ -417,12 +424,17 @@ footer{
   
     
 }
+
+.img8{
+    margin-top: 100px;
+}
 }
    
  .menu-button{
     display: none;
 
  }  
+
 @media only screen and (max-width:1024px){
     .hideOnMobile {
         display: none;
@@ -469,34 +481,33 @@ footer{
     padding: 30px;
     border-bottom: white solid 3px;
     border-top: white solid 3px;
+
+    display: block;
    
     
 }
-.aboutmain h2:hover{
-    color:#371558;
-    transition: .05s;
-    
 
-}
 
 .aboutmain p{
     
     color:black;
     font-family: "poppins";
-    font-size: 20px;
-   
+    font-size: 23px;
+   width: 60%;
     text-align: justify;
     margin-top: 50px;
     margin-bottom: 50px;
-    padding: 50px;
+    padding: 150px;
     padding-top: 50px;
-    line-height: 42px;
+    line-height: 55px;
     margin-right: 100px;
     margin-left: 100px;
     background-color: gold;
     border: solid white 3px;
     border-radius:20px;
     display: none;
+    margin-left: auto;
+    margin-right: auto;
     
 
     
@@ -766,10 +777,7 @@ span{
     color:white;
 }
 
-.contactmain h2:hover{
-    color:#371558;
-    transition: .05s;
-}
+
 
 .project_main{
     display: block;
@@ -855,13 +863,28 @@ span{
     color: white;
     font-family: "poppins";
     font-size: 18px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 }
 .project_main h3:hover{
     color:gold;
     background-color: black;
+    cursor:pointer;
     
 
 }
+
+ .title{
+    background-color: black;
+    border-radius: 50px;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+
+
 
 .servicesmain h2{
     text-align: center;
@@ -899,23 +922,27 @@ span{
     color:black;
     font-family: "poppins";
     font-size: 20px;
-   
+   width: 60%;
     text-align: justify;
     margin-top: 50px;
     margin-bottom: 50px;
-    padding: 50px;
+    padding: 125px;
     padding-top: 10px;
-    line-height: 42px;
+    line-height: 55px;
     margin-right: 100px;
     margin-left: 100px;
     background-color: gold;
     border: solid white 3px;
     border-radius:20px;
+    margin-left: auto;
+    margin-right: auto;
+    
 }
 .blogmain span{
-    font-size: 35px;
+    font-size: 32px;
     display: block;
     margin: 5px;
+    padding-top: 60px;
    
 }
 
@@ -925,13 +952,13 @@ span{
 }
 
 .img17, .img18, .img19 {
-   height: 80%;
-   width: 80%;
+   height: 70%;
+   width: 70%;
 }
 
 .servicesmain h3{
     font-family: "poppins";
-    font-size: 40px;
+    font-size: 35px;
     color: white;
     display: none;
   
@@ -941,24 +968,25 @@ span{
 .servicesmain p{
     color: white;
     text-align: center;
-
+    width: 60%;
     color:black;
     font-family: "poppins";
-    font-size: 20px;
+    font-size: 23px;
    
     text-align: justify;
     margin-top: 50px;
     margin-bottom: 50px;
     padding: 50px;
     padding-top: 50px;
-    line-height: 42px;
+    line-height: 55px;
     margin-right: 100px;
     margin-left: 100px;
     background-color: gold;
     border: solid white 3px;
     border-radius:20px;
     display: none;
-   
+   margin-left: auto;
+   margin-right: auto;
 }
 
 
@@ -988,11 +1016,11 @@ span{
     }
     .aboutmain p{
         font-size: 16px;
-       
         text-align: justify;
-        margin: auto;
-        
         padding-bottom: 57px;
+        width: auto;
+        padding: 50px;
+        margin: 10px;
         
 
     
@@ -1000,10 +1028,15 @@ span{
         
     }
 
+
+   
+
     .img4{
-       margin:10px;
-       margin-top: 15px;
+       margin:auto;
+       margin-top: 45px;
+       margin-bottom: 45px;
        box-shadow: none;
+
         
     }
 
@@ -1025,7 +1058,7 @@ span{
        
     }
     h1{
-        font-size: 20px;
+        font-size: 25px;
         margin: 0;
         
 
@@ -1040,13 +1073,17 @@ span{
     }
     
     .blogmain .span3{
-        font-size: 15px;
+        font-size: 20px;
         text-align: center;
 
     }
     .blogmain p{
-        margin: 10px;
-        margin-top: 50px;
+       width: 300px;
+       padding: 25px;
+        margin-top: 30px;
+        line-height: 30px;
+        padding-bottom: 80px;
+        font-size: 15px;
         
     }
     .servicesmain h3{
@@ -1055,7 +1092,27 @@ span{
 
     .servicesmain p{
         width: 300px;
+        padding: 25px;
         margin: auto;
+        line-height: 30px;
+        font-size: 15px;
+    }
+
+    .project_main h2{
+        font-size: 30px;
+    }
+    .servicesmain h2{
+        font-size: 30px;
+    }
+
+    .blogmain h2{
+        font-size: 30px;
+    }
+    .contactmain h2{
+        font-size: 30px;
+    }
+    .aboutmain h2{
+        font-size: 30px;
     }
    
     }
@@ -1159,6 +1216,7 @@ span{
 
 .sidebar{
     width: 100%;
+    
 }
 
 
@@ -1198,15 +1256,7 @@ span{
     .aboutmain{
         width: 100dvw;
     }
-    .aboutmain h2{
-        width: 100dvw;
-        text-align: center;
-        font-size: 60px;
-        margin: 0;
-        padding: 0;
-        
-
-    }
+ 
     header{
         display: inline flex;
         padding: 0;
@@ -1306,15 +1356,26 @@ span{
     text-align: center;
 }
 
+.blogmain p{
+    padding-bottom: 60px;
+    margin-bottom: 100px;
+}
+
+.aboutmain span{
+    font-size: 30px;
+}
+
 }
 @media only screen and (max-width: 390px){
 
 h1{
-    font-size: 20px;
+    font-size: 25px;
 }
 .aboutmain h2{
-    font-size: 20px;
-    width: 100%;
+    font-size: 30px;
+    
+    
+    
 }
 
 .navlist{  
@@ -1327,16 +1388,19 @@ h1{
     width: auto;
     height: auto;
     margin-bottom: 60px;
-    margin-left: 10px;
-    margin-right: 10px;
-    text-align: center;
+    margin-left: 15px;
+    margin-right: 15px;
+    text-align: justify;
+    padding: 20px;
+    line-height: 42px;
     
 }
 
 .aboutmain span{
     
     font-size:30px;
-    text-align: left;
+    text-align: center;
+    
 
 }
    
@@ -1393,9 +1457,11 @@ h1{
     padding-bottom: 67px;
 }
 .img4{
-    width: 90%;
-    margin-left: 15px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
     text-align: center;
+    
     
 }
 span{
@@ -1416,6 +1482,7 @@ span{
 
 .sidebar .navlink a{
     font-size: 20px;
+    
 }
 
 .blogmain .span3{
@@ -1443,5 +1510,20 @@ span{
     font-size: 30px;
 }
 
+.img14 , .img15, .img16 {
+    width: 80%;
+}
+
+.project_main h3{
+    margin-bottom: 80px;
+    font-size: 30px;
+}
+.indesign{
+    margin-bottom: 150px;
+
+}
+.project_main h2{
+    font-size: 30px;
+}
 
 }
